Subida inicial del proyecto Laravel

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:HN0/57fI90J3g0efWbAoAkfpm1BsAMLa42Ys3Y49Su8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=protectora
+DB_DATABASE=protectora_animales
 DB_USERNAME=root
 DB_PASSWORD=
 
