Agrega configuración PHP 8.1 para Railway

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,6 @@
-[phppack]
-version = "8.1"
+
+[phases.setup]
+nixPkgs = ['php81', 'php81Packages.composer', 'mysql']
+
+[start]
+cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
