--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mainline.proxy.rlwy.net
-DB_PORT=16629
-DB_DATABASE=railway
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=protectora_animales
 DB_USERNAME=root
-DB_PASSWORD=sVnupKaJTpvlQElKXfEDbtCPYCyamHWE
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
