--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
-/storage/*.key
+/storage/*
+!storage/app/public/
+!storage/app/public/animals/
 /vendor
 .env
 .env.backup
