--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,12 @@
 /public/hot
 /public/storage
 /storage/*
-!storage/app/public/
-!storage/app/public/animals/
+!/storage/app/
+/storage/app/*
+!/storage/app/public/
+/storage/app/public/*
+!/storage/app/public/animals/
+/storage/app/public/animals/**
 /vendor
 .env
 .env.backup
